# hipopy

./: .gitignore  .gitmodules  .pylintrc  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  python.yml
docs/source/: api.rst  conf.py  examples.rst  hipopy.rst  index.rst  readme.rst  start.rst  usage.rst
hipopy/: __init__.py  hipopy.py
misc/: test.hipo
tests/: test_hipopy.py  test_hippy.py
tutorials/: HipopyTutorial.ipynb  PerformanceComparison.ipynb  append1.py  append2.py  read.py  write.py
