[tool.poetry]
name = "hipopy"
version = "0.1.2"
description = ""
authors = ["Matthew McEneaney <matthew.mceneaney@duke.edu>"]

[tool.poetry.dependencies]
python = "^3.7.3"
awkward = "^1.3.0"
numpy = "^1.19.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
