[tool.poetry]
name = "hipopy"
version = "2.0.1"
license = "MIT"
description = "UpROOT-Like I/O Interface for CLAS12 HIPO Files"
authors = ["Matthew McEneaney <matthew.mceneaney@duke.edu>"]
repository = "https://github.com/mfmceneaney/hipopy.git"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0"
numpy = ">=2.0.0"
hipopybind = ">=2.0.1"

[tool.poetry.group.dev.dependencies]
black = ">=25.9.0"
pylint = ">=3.3.8"
pytest = ">=5.2"
myst_parser = ">=3.0.0"
sphinx-rtd-theme = ">=2.0.0"
dill = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
